Fix UnifiedSystemTray animation on lock screen.

UnifiedSystemTray animation in lock screen was broken because
https://crrev.com/c/1156203 did not consider the added view for
calculating GetExpandedHeight().

TEST=manual
BUG=871192

Change-Id: I4704c3f6ee1a4196e852718fc2c094179f834b38
Reviewed-on: https://chromium-review.googlesource.com/1164871
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581428}
Former-commit-id: 6ea403063969e7572f692881df5e7fcd1d2b526f